# ndstrim-dx

./: .gitignore  Cargo.toml  README.md  TrimAllNDS.command
src/: main.rs  nds.rs
