[package]
name = "ndstrim"
version = "0.2.1"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/KakarottoCake/ndstrim/"
authors = ["KakarottoCake"]
description = "A utility to trim NDS ROMs."

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics"] }
clap = { version = "4.6.1", features = ["derive"] }
crc = "3.4.0"

[profile.release]
lto = true
strip = true
